# labor-07-f-jlkezel-s-s-men-k-Munlaly

CsvOpener/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
FindFiles/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
Quotes/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  resources.qrc  style.qss
